--- a/english.html
+++ b/english.html
@@ -419,7 +419,7 @@ Error message and password prompt
 
 <li>Rosh Hashana dinner</li>
 
-<li>Russell</li>
+<li>Rushell</li>
 
 <li>Saraleh would have liked it</li>
 
@@ -8337,7 +8337,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200213214744928" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200215132847241" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8346,7 +8346,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Chez Panisse]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Single parent children]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8366,7 +8366,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215124546680" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215134012473" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8600,10 +8600,10 @@ This is Berry, who was a prince that mostly played and became a king who wrote a
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20191113141855567" modified="20191113143521142" tags="music [[outer sisters]]" title="Bjork">
+<div created="20191113141855567" modified="20200215132743329" tags="music [[outer sisters]]" title="Bjork">
 <pre>[img[pictures/bjork.jpg]]
 
-!!![[Russell]]:
+!!![[Rushell]]:
 
 Bjork is so cool for so many reasons. Gura likes this album very much.
 I chose to put this here. I like the song and I like the video.
@@ -9025,11 +9025,11 @@ Yes you- killing machines, exterminating and cancelling all that's not in your f
 
 </pre>
 </div>
-<div created="20200212215510131" modified="20200213214815191" tags="[[Monkeys with car keys]] [[The team]]" title="In the Animal Farm">
+<div created="20200212215510131" modified="20200215132843543" tags="[[Monkeys with car keys]] [[The team]]" title="In the Animal Farm">
 <pre>[img[pictures/bechavat-hachayot.jpg]]
 
 
-''[[IT’S VERY VERY FUN]]''
+''IT’S VERY VERY FUN''
 
 
 &lt;&lt;list-links filter:&quot;[tag[In the Animal Farm]]&quot;&gt;&gt;
@@ -9370,7 +9370,7 @@ Rosh Hashana 2017 was really something. Meaning, in the end of the day it was gr
 
  &lt;&lt;heblink [[ארוחת ראש השנה]]&gt;&gt;</pre>
 </div>
-<div created="20200202163339570" modified="20200202163759854" tags="[[Coen sister]] [[Single parent children]]" title="Russell">
+<div created="20200202163339570" modified="20200215132700910" tags="[[Coen sister]] [[Single parent children]]" title="Rushell">
 <pre>[img[pictures/rachel.jpg]]
 
 
@@ -9385,8 +9385,21 @@ Rosh Hashana 2017 was really something. Meaning, in the end of the day it was gr
  &lt;&lt;heblink [[שרלה הייתה אוהבת את זה]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212222159882" modified="20200212222401550" tags="[[True stories]] Children" title="Single parent children">
+<div created="20200212222159882" modified="20200215134519589" tags="[[True stories]] Children" title="Single parent children">
 <pre>[img[pictures/yeladim-chad.jpg]]
+
+!!![[Rushell]]:
+
+I study at an art school, I'm a junior and I focus on video studyings.
+My new history-of-art teacher, gave us a mission.
+We should have brought an oeuvre we especially love, of any field there is, and try to explain what about this oeuvre touched us or spoke to us.
+I brought [[Michel Gondry]] and his work, [[Alfred]] introduced me to him, and I really fell in love with how he presents things, but that's not the main thing.
+The main thing for me was hearing the stories of the children in class. [[That is not my story|https://www.youtube.com/watch?v=aCs1rkAXZ9o]], but it was a lot whole of pain, seeing [[mom|Genevieve]] suffering because of dad.
+I remember mom crying on the sofa before and after the divorce, but after the divorce it was different. 
+My parents separated when I was 11. My grandfather, mom's father, passed away two years earlier and mother has already admitted to me, that only after my grandfather's passing she dared to get a divorce. My dad is no fun. I stopped seeing him when I turned 14, and since then I'm in therapy. I don't know when and if I'll meet him, but for now I'm not interested in seeing him.
+Time heals us, and now, mother and us have [[Joseph|Jozef Abaroa]] and Alfred and [[the sisters|Coen Sisters]] and shoulders, where you could lean your head on and [[rest|https://www.youtube.com/watch?v=loB0kmz_0MM]].
+
+
 
 &lt;&lt;list-links filter:&quot;[tag[Single parent children]]&quot;&gt;&gt;
 
