--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ילדים חד הוריים]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215123221685" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215132939331" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10865,7 +10865,7 @@ Is where I want to be
 
 ג'ו [[ונורמה|סיפורים שסיפרתי לנורמה]] אספו אותי אליהם ואימצו אותי, כשהגעתי בת 18 [[מהנחלה|הנחלה בה גדלתי]] לארץ.</pre>
 </div>
-<div created="20170225204122418" modified="20170522173443649" tags="[[אחות כהן]]" title="ג'וזף אברואה">
+<div created="20170225204122418" modified="20200215134354506" tags="[[אחות כהן]]" title="ג'וזף אברואה">
 <pre>[img[pictures/jozef.jpg]]
 
 
@@ -13370,7 +13370,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170610184436279" modified="20200212223656870" tags="[[סיפורים אמיתיים]] ילדים" title="ילדים חד הוריים">
+<div created="20170610184436279" modified="20200215134555690" tags="[[סיפורים אמיתיים]] ילדים" title="ילדים חד הוריים">
 <pre>[img[pictures/yeladim-chad.jpg]]
 
 !!![[ראשל]]:
@@ -13390,7 +13390,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 ההורים שלי נפרדו כשהייתי בת 11. סבא, אביה של אימי, נפטר שנתיים קודם, ואימא כבר הודתה בפני, שרק אחרי שסבי נפטר העזה להתגרש.
 אבא שלי הוא לא כייף. הפסקתי להיפגש איתו כשמלאו לי 14, ומאז אני גם בטיפול פסיכולוגי. אני לא יודעת מתי ואם אפגש איתו, אך  לעת עתה אני פשוט לא מעוניינת לראות אותו. 
 
-הזמן מרפא אותנו, וכעת, לאימא ולנו יש את [[ג'וזף|ג'וזף אברואה]] ואלפרד ואת [[האחיות|האחיות כהן]], ויש  כתפיים, עליהן אפשר להניח את הראש [[ולנוח|https://www.youtube.com/watch?v=KDbPYoaAiyc]]. 
+הזמן מרפא אותנו, וכעת, לאימא ולנו יש את [[ג'וזף|ג'וזף אברואה]] ואלפרד ואת [[האחיות|האחיות כהן]], ויש  כתפיים, עליהן אפשר להניח את הראש [[ולנוח|https://www.youtube.com/watch?v=loB0kmz_0MM]]. 
 
 &lt;&lt;list-links filter:&quot;[tag[ילדים חד הוריים]]&quot;&gt;&gt;
 
@@ -17770,14 +17770,14 @@ Fapina''
 
 הם גרים בקיבוץ בערבה והיא מתפרנסת מאריגת שטיחים צבעוניים, על נולים ענקיים, מרצועות טריקו צבעוניות.</pre>
 </div>
-<div created="20170401150113960" modified="20200202164029119" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="ראשל">
+<div created="20170401150113960" modified="20200215132631349" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="ראשל">
 <pre>[img[pictures/rachel.jpg]]
 
 !!![[גורה]]:
 
 ראשל היא בתה הצעירה של [[ז'נבייב]], היא ילידת שנת 2000, היא תיכוניסטית במגמת אומנות פלסטית, והיא [[ג'וקרית|ילדים חד הוריים]] אמיתית.
 
-&lt;&lt;englink [[Russell]]&gt;&gt;
+&lt;&lt;englink [[Rushell]]&gt;&gt;
 </pre>
 </div>
 <div created="20170822191101898" modified="20200208130344517" tags="[[המטבח על פי ז'נבייב]] [[חיות אוכל]] מסעדות מטבחים [[בדרך לאן שהוא]]" title="רביזיה במטבח">
