--- a/english.html
+++ b/english.html
@@ -259,6 +259,8 @@ Error message and password prompt
 
 <li>Alexandra</li>
 
+<li>Alfred</li>
+
 <li>Assuming and Preserving</li>
 
 <li>Ayala Malach Pines</li>
@@ -367,6 +369,8 @@ Error message and password prompt
 
 <li>John Irving</li>
 
+<li>Jozef Abaroa</li>
+
 <li>Keep on bleeding</li>
 
 <li>Kitchens</li>
@@ -386,6 +390,8 @@ Error message and password prompt
 <li>Menopause sisters</li>
 
 <li>Metafiction</li>
+
+<li>Michel Gondry</li>
 
 <li>Monkeys with car keys</li>
 
@@ -8566,6 +8572,14 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
  &lt;&lt;heblink [[אלכסנדרה]]&gt;&gt;</pre>
 </div>
+<div created="20200215135137601" modified="20200215135249722" tags="[[Coen sister]] [[Single parent children]] [[I would like to apologize]]" title="Alfred">
+<pre>
+[img[pictures/alfred.jpg]]
+
+ &lt;&lt;heblink [[אלפרד]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20200215095540063" modified="20200215095741084" tags="[[In the Animal Farm]]" title="Assuming and Preserving">
 <pre>[img[pictures/nekiyey-capaim.jpg]]
 
@@ -9107,6 +9121,16 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
  &lt;&lt;heblink [[ג'ון אירווינג]]&gt;&gt;
 </pre>
 </div>
+<div created="20200215135425861" modified="20200215135806057" tags="[[Coen sister]]" title="Jozef Abaroa">
+<pre>
+
+[img[pictures/jozef.jpg]]
+
+
+
+ &lt;&lt;heblink [[ג'וזף אברואה]]&gt;&gt;
+</pre>
+</div>
 <div created="20200212173527645" modified="20200215095257898" tags="[[In the Animal Farm]] [[Monkeys with car keys]]" title="Keep on bleeding">
 <pre>[img[pictures/benataim-medamemim.jpg]]
 
@@ -9199,6 +9223,15 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 
 
 
+
+</pre>
+</div>
+<div created="20200215134900574" modified="20200215135012769" tags="[[Outer sisters]] Films Music" title="Michel Gondry">
+<pre>
+[img[pictures/michel-gondry.jpg]]
+
+
+ &lt;&lt;heblink [[מישל גונדרי]]&gt;&gt;
 
 </pre>
 </div>
@@ -9419,7 +9452,7 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
 
  &lt;&lt;heblink [[נשמה]]&gt;&gt;</pre>
 </div>
-<div created="20200215103830870" modified="20200215124752573" tags="[[Outer sisters]] Films" title="Spike Lee">
+<div created="20200215103830870" modified="20200215135543801" tags="[[Outer sisters]] Films" title="Spike Lee">
 <pre>
 [img[pictures/spike-lee.jpg]]
 
