--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ילדים חד הוריים]]" title="$:/StoryList">
+<div list="[[ג'וזף אברואה]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215132939331" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215135451274" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10363,7 +10363,7 @@ well,
 
 &lt;&lt;englink [[alan ball]]&gt;&gt;</pre>
 </div>
-<div created="20170328195137638" modified="20180408083901894" tags="[[אחות כהן]] [[ילדים חד הוריים]] [[אני רוצה להתנצל]]" title="אלפרד">
+<div created="20170328195137638" modified="20200215135347130" tags="[[אחות כהן]] [[ילדים חד הוריים]] [[אני רוצה להתנצל]]" title="אלפרד">
 <pre>[img[pictures/alfred.jpg]]
 
 !!![[גורה]]:
@@ -10376,7 +10376,7 @@ well,
 
 
 
-
+&lt;&lt;englink [[Alfred]]&gt;&gt;
 
 
 
@@ -10865,18 +10865,21 @@ Is where I want to be
 
 ג'ו [[ונורמה|סיפורים שסיפרתי לנורמה]] אספו אותי אליהם ואימצו אותי, כשהגעתי בת 18 [[מהנחלה|הנחלה בה גדלתי]] לארץ.</pre>
 </div>
-<div created="20170225204122418" modified="20200215134354506" tags="[[אחות כהן]]" title="ג'וזף אברואה">
+<div created="20170225204122418" modified="20200215140001537" tags="[[אחות כהן]]" title="ג'וזף אברואה">
 <pre>[img[pictures/jozef.jpg]]
 
 
-''jozef abaroa''
 
 
 !!![[גורה]]:
 
 ג'וזף אברואה הוא גבר יפה, גבוה וחכם. הוא בן 60, רוב חייו כתב מאמרי דעה בעיתונים בספרד. הוא שמאלן, הוא טוב לב, הוא סופר נחמד, [[גרושתו|מריאן]] עזבה והשאירה אותו עם ילדיו, והוא אבא של [[אלפרד]] ובן זוגה של [[ז'נבייב]].
 
-כשאלפרד ואני היינו יחד, ונסענו ליער ונפצעתי, ג'וזף דאג לי ולהכל לאורך כל הדרך, ומאז כולנו חיים באושר ועושר.</pre>
+כשאלפרד ואני היינו יחד, ונסענו ליער ונפצעתי, ג'וזף דאג לי ולהכל לאורך כל הדרך, ומאז כולנו חיים באושר ועושר.
+
+&lt;&lt;englink [[Jozef Abaroa]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20170415192146343" modified="20191113144403291" tags="[[אחיות חוץ]] סרטים" title="ג'ון אירווינג">
 <pre>[img[pictures/john-irving.jpg]]
@@ -15141,7 +15144,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 הקיר הצפוני של המפעל הוא מקום בו הנוער נוהג לצייר [[גרפיטי|לצייר גרפיטי וירטואלי במִיצְפֶּרֶש]]. משה מוכר פוטאג' של מצלמות האבטחה שם לסטארטאפים של [[זיהוי ביומטרי|https://no2bio.org]]. יש לו חוש טבעי לתאורת אינפרא אדום דרמטית. רבים בתעשיה הבטחונית רואים במשה אמן וידאו אלטרנטיבי.</pre>
 </div>
-<div created="20170614165341450" modified="20190126104028190" tags="[[אחיות חוץ]] מוזיקה סרטים" title="מישל גונדרי">
+<div created="20170614165341450" modified="20200215135106383" tags="[[אחיות חוץ]] מוזיקה סרטים" title="מישל גונדרי">
 <pre>[img[pictures/michel-gondry.jpg]]
 
 !!![[ראשל]]:
@@ -15151,6 +15154,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 [[אלפרד]] הכיר לי אותו.
 
 ראינו את [[מדעי החלום|http://www.imdb.com/title/tt0354899/]], והתאהבתי. ראיתי אחר כך במשך כמה ימים כל מה שהשגתי בעזרת [[המקלדת|מקלדת]], והתאהבתי מאד גם [[בביורק|ביורק]] מכל הצפיות האלה.
+
+&lt;&lt;englink [[Michel Gondry]]&gt;&gt;
 
 
 </pre>
@@ -18163,7 +18168,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170821183123825" modified="20200215120733485" tags="[[דןדן נסע]] מסעדות [[חיות אוכל]] מטבחים" title="שה פניס">
+<div created="20170821183123825" modified="20200215135934032" tags="[[דןדן נסע]] מסעדות [[חיות אוכל]] מטבחים" title="שה פניס">
 <pre>!!![[יויו]]:
 
 כן - [[הוא|דןדן]] כתב לנו עוד מכתב (אוגוסט 2017), וגם אותו אני מעתיק לכאן:
