--- a/english.html
+++ b/english.html
@@ -417,6 +417,8 @@ Error message and password prompt
 
 <li>Prince</li>
 
+<li>Puaa</li>
+
 <li>Radio epgb</li>
 
 <li>Recipes</li>
@@ -8372,7 +8374,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215134012473" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215140533686" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8697,7 +8699,7 @@ Dandan
 
 </pre>
 </div>
-<div created="20200215115804719" modified="20200215125404801" tags="Restaurants [[Food addicts]] [[Dandan went]] Kitchens" title="Chez Panisse">
+<div created="20200215115804719" modified="20200215140612664" tags="Restaurants [[Food addicts]] [[Dandan went]] Kitchens" title="Chez Panisse">
 <pre>!!![[Yoyo]]:
 
 Yes- [[he|Dandan]] wrote us another letter (August 2017), and I'm pasting it here as well:
@@ -9364,6 +9366,23 @@ I’ve tried to paint Pedro Almodóva from [[this photo|https://www.indiewire.co
 
 
  &lt;&lt;heblink [[פרינס]]&gt;&gt;
+
+
+</pre>
+</div>
+<div created="20200215140208543" modified="20200215141026096" tags="Restaurants [[Outer sisters]]" title="Puaa">
+<pre>
+
+[img[pictures/pooa.jpg]]
+
+!!![[Yoyo]]:
+
+[[Puah|https://puaa.rol.co.il/]], the woman and the founder, passed away in January 2015.
+The Café-Restaurant that was founded in 1999 continues on working.
+It's where Yoyo spoke with [[Eva|Eva Coen]] for the first time.  
+
+  &lt;&lt;heblink [[פועה]]&gt;&gt;
+
 
 
 </pre>
