--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ג'וזף אברואה]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215135451274" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215140204062" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -17012,14 +17012,19 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20161215205302791" modified="20190219162615825" tags="[[אחיות חוץ]] מסעדות" title="פועה">
+<div created="20161215205302791" modified="20200215140940548" tags="[[אחיות חוץ]] מסעדות" title="פועה">
 <pre>[img[pictures/pooa.jpg]]
 
-פועה, האישה והמקימה, נפטרה בינואר 2015.
+!!![[יויו]]:
+
+[[פועה|https://puaa.rol.co.il/]], האישה והמקימה, נפטרה בינואר 2015.
 
 הקפה-מסעדה שהוקם ב-1999 ממשיך לעבוד. 
 
-שם יויו דיבר עם [[אווה|אווה כהן]] בפעם הראשונה.</pre>
+שם יויו דיבר עם [[אווה|אווה כהן]] בפעם הראשונה.
+
+
+&lt;&lt;englink [[Puaa]]&gt;&gt;</pre>
 </div>
 <div created="20170411134035592" modified="20180605133753982" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="פחזניות ממולאות בכבד קצוץ">
 <pre>[img[pictures/pachzaniyot.jpg]]
@@ -18168,7 +18173,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170821183123825" modified="20200215135934032" tags="[[דןדן נסע]] מסעדות [[חיות אוכל]] מטבחים" title="שה פניס">
+<div created="20170821183123825" modified="20200215140738888" tags="[[דןדן נסע]] מסעדות [[חיות אוכל]] מטבחים" title="שה פניס">
 <pre>!!![[יויו]]:
 
 כן - [[הוא|דןדן]] כתב לנו עוד מכתב (אוגוסט 2017), וגם אותו אני מעתיק לכאן:
