--- a/english.html
+++ b/english.html
@@ -8345,7 +8345,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200215132847241" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200215142649922" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8354,7 +8354,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Single parent children]]" title="$:/StoryList">
+<div list="Dandan [[Single parent children]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8374,7 +8374,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215140533686" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215142201758" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8803,8 +8803,23 @@ Be good.
 
  &lt;&lt;heblink [[בתי קפה]]&gt;&gt;</pre>
 </div>
-<div created="20200215120453473" modified="20200215122630916" tags="[[Dandan went]] Laundry [[Coen sister]]" title="Dandan">
+<div created="20200215120453473" modified="20200215142647900" tags="[[Dandan went]] Laundry [[Coen sister]]" title="Dandan">
 <pre>[img[pictures/dandan.jpg]]
+
+!!![[Dandan]]:
+
+I'm not one of those technological people. I know how to do stuff with my hands but I'm not good with instruments. I'm good at washing the dishes and organizing. I like to polish. To tint. I like to put the [[washing powder|Laundry]] in the left side of the washing machine's drawer, and in the middle the fabric softener. To close the drawer while I tune the program with the touch screen, hearing it starting to work. I like the days when I easily wake up and go out with [[Iry]] to her morning walks. I like to sit with [[Alfred]] on the Montmartre's stairs early in the morning and smoke joints. I like when [[Genevieve]] hugs me for goodbye at the end of a work day, and tells me that I'm great and that she loves me. Until I met [[Yoyo]] and his group, I hadn't really have friends. Most of my life I moved from one place to another, and when I was in my teenage years I was a dealer in New York. In some of the places I had friends, but I didn't stay in touch with any of them. I can lay down for hours without moving. I know how to listen to talks. My dad could have talked for hours without stopping.
+Sometimes I miss my uncle Mo and mom, but it's not like I really need to see them. Sometimes I think about dad and miss him. I like being alone on holidays. I like wandering around the decorated cities while they're empty, and only the lonely ones walk in the streets. I like to buy myself a meal in some grocery store, walk home and take a long hot shower. Sit in front of the [[television|TV]] and change the channels.
+
+I celebrated my 18th birthday with my mom, who was hospitalized at that time in a boutique sanatorium in Colorado. My birthday is in February. It was freezing. We sat in her warm pleasant room. We ordered tons of food courses, from a faraway eastern country restaurant, we ate with appetite and chitchatted. Even the strong meds she was on couldn't neutralize her naughtiness and her kindness. She told me that she wants me to have a good life. 
+
+Now my life is good. I live with the people I love. We do many things. I feel beloved and wanted. I provide for myself with dignity and think about it. By the way, my full official name is Daniel Jesse Wineman. 
+
+!!![[Iry]]:
+
+On June, [[Dandan]] went.
+
+
 
  &lt;&lt;heblink [[דןדן]]&gt;&gt;
 
