--- a/english.html
+++ b/english.html
@@ -8354,7 +8354,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Dandan [[Single parent children]]" title="$:/StoryList">
+<div list="[[The global village]] Dandan [[Single parent children]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8374,7 +8374,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215142201758" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215143138425" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9577,8 +9577,21 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
 
 </pre>
 </div>
-<div created="20200213212257979" modified="20200213212926793" tags="[[Monkeys with car keys]] [[Iry and Gura]] [[Iry claims]]" title="The global village">
+<div created="20200213212257979" modified="20200215144046981" tags="[[Monkeys with car keys]] [[Iry and Gura]] [[Iry claims]]" title="The global village">
 <pre>[img[pictures/hacfar-haglobaly.jpg]]
+
+
+!!![[Iry and Gura]]:
+
+Over time, we've talked not so little about the global village specifically and about the man kind in general. Both of us saw, like many others, the stupidity of the mankind. It is possible that Ecclesiastes was right, utterly meaningless everything is meaningless and what do people gain from all their labors, but all of the doofuses from most of the countries and especially the mega imperialists war-loving ones, have ceased yet to understand a tiny thing. They haven't understood that our pleasant ball which we named earth, is maybe just a remote star in the end of a faraway galaxy, which a foot, of what we call an alien, has started slipping in the door only in the last decades or thousands. We're completely primitive in any way there is, but our inexhaustible stupidity and our desire to conquer made us think we're a big deal. Well, we think that we're not a big deal.
+
+And since that's what we think, and also in the Coen sisters' doctrine there is an expressed aspiration for a matriarchal society- both of us want to address you the men, with politeness, and tell you that now may be the time to vacate the management position for us, the ladies, because as things seem right now we can declare you as bankrupted who need custodians.
+
+When we say women we don't mean one gender or another, but the ones who receive, get conquered. 
+
+We'll leave it at that for today.
+
+
 
  &lt;&lt;heblink [[הכפר הגלובלי]]&gt;&gt;</pre>
 </div>
