--- a/english.html
+++ b/english.html
@@ -363,6 +363,8 @@ Error message and password prompt
 
 <li>James Gandolfini</li>
 
+<li>Jazz's mom</li>
+
 <li>Jeff Bridges</li>
 
 <li>John Goodman</li>
@@ -452,6 +454,8 @@ Error message and password prompt
 <li>The first assembly</li>
 
 <li>The global village</li>
+
+<li>The Grass</li>
 
 <li>The kitchen according to Genevieve</li>
 
@@ -8354,7 +8358,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The global village]] Dandan [[Single parent children]]" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8374,7 +8378,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215143138425" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215144214529" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8889,12 +8893,12 @@ Sherlock, in the Jonny Lee Miller version, watches seven screens at the same tim
 
  &lt;&lt;heblink [[אווה]]&gt;&gt;</pre>
 </div>
-<div created="20200115145347212" modified="20200202171038249" tags="[[Coen sister]] Mothers" title="Eva Coen">
+<div created="20200115145347212" modified="20200215151700555" tags="[[Coen sister]] Mothers" title="Eva Coen">
 <pre>[img[pictures/eva-coen.jpg]]
 
 !!![[Gura]]:
 
-Of all the people who came to us, the tale with Eva is the weirdest, although not because of her, because Yoyo, who used to live at the flea market in Jaffa at that time, and used to drink coffee at Puah, simply addressed Eva one day, who was a pastry-cook there, asking her if he can talk to her. Within few minutes into their first conversation he told her about me and about himself, as described in the first book BY THE WAY AS AN ASIDE.
+Of all the people who came to us, the tale with Eva is the weirdest, although not because of her, because [[Yoyo]], who used to live at the flea market in Jaffa at that time, and used to drink coffee at [[Puaa]], simply addressed Eva one day, who was a pastry-cook there, asking her if he can talk to her. Within few minutes into their first conversation he told her about me and about himself, as described in the first book BY THE WAY AS AN ASIDE.
 
 Eva is a nearly-51-year-old woman, she was born in 1966, she has a nearly-21-year-old daughter named Iris, and at the Christmas dinner, almost one year ago, she met Dr. Philippe Lumber, my shrink, whom she loved since she was twenty something years old and he loved her.
 
@@ -9111,6 +9115,17 @@ Iris, the daughter of [[Eva]], is a glowing girl. She glows through the darkness
 The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave it all.
 
  &lt;&lt;heblink [[ג'יימס גנדולפיני]]&gt;&gt;
+
+
+</pre>
+</div>
+<div created="20200215152111069" modified="20200215152257475" tags="[[Here in the Ghetto]] Mothers Metafiction" title="Jazz's mom">
+<pre>
+[img[pictures/ima-shel-jazz.jpg]]
+
+
+
+ &lt;&lt;heblink [[אימא של ג'אז]]&gt;&gt;
 
 
 </pre>
@@ -9486,7 +9501,7 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
 
  &lt;&lt;heblink [[נשמה]]&gt;&gt;</pre>
 </div>
-<div created="20200215103830870" modified="20200215135543801" tags="[[Outer sisters]] Films" title="Spike Lee">
+<div created="20200215103830870" modified="20200215152213401" tags="[[Outer sisters]] Films" title="Spike Lee">
 <pre>
 [img[pictures/spike-lee.jpg]]
 
@@ -9594,6 +9609,18 @@ We'll leave it at that for today.
 
 
  &lt;&lt;heblink [[הכפר הגלובלי]]&gt;&gt;</pre>
+</div>
+<div created="20200215151711149" modified="20200215151942374" tags="[[Here in the Ghetto]] [[True stories]]" title="The Grass">
+<pre>
+[img[pictures/hadeshe.jpg]]
+
+!!![[Jazz's mom]]:
+
+The grass after rain, is greenish green.
+
+
+ &lt;&lt;heblink [[הדשא]]&gt;&gt;
+</pre>
 </div>
 <div created="20200213161521882" modified="20200213161924497" tags="Meals Kitchens Recipes" title="The kitchen according to Genevieve">
 <pre>[img[pictures/genevieve-food.jpg]]
