--- a/english.html
+++ b/english.html
@@ -251,6 +251,8 @@ Error message and password prompt
 
 <li>9-side-wishing-star</li>
 
+<li>A Fairy Tale's Mother</li>
+
 <li>A friend</li>
 
 <li>A politician</li>
@@ -260,6 +262,8 @@ Error message and password prompt
 <li>Alexandra</li>
 
 <li>Alfred</li>
+
+<li>Angelic</li>
 
 <li>Assuming and Preserving</li>
 
@@ -8358,7 +8362,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="[[A Fairy Tale's Mother]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8378,7 +8382,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215144214529" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215154649922" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8540,6 +8544,23 @@ coming soon as possible
 
  &lt;&lt;heblink [[כוכב המשאלות בעל תשע הצלעות]]&gt;&gt;</pre>
 </div>
+<div created="20200215154318530" modified="20200215155042112" tags="Mothers [[True stories]]" title="A Fairy Tale's Mother">
+<pre>
+[img[pictures/ima-mehaagadot.jpg]]
+
+!!![[Angelic]]:
+
+As there are types of palms and types of limbs, there are also types of mothers. The type of mother that I received, is a biologic type indeed, but really behaves like a step mother from a fairy tale.
+
+This is a mother who doesn't need an apple. She shoots poisonous words, and poisonous gazes on a regular basis. You have to follow her orders, and even understand her inner ethical code, which changes chaotically and unethically.
+ 
+Sometimes, she smiles, and pretends like she's thought about you. You mustn’t smile back when it happens. Expressing discontent is off the table.
+
+With the assistance of the code she has transplanted in my father, in me and in my two sisters –that we will always feel frightened, be embarrassed and feel ashamed- she separates us and sets us in motion, like a puppeteer. Even when I lived far from my parents' house, or in times where I wasn't in touch with them- she managed to activate me and even now, after I've thought for a while that my father is a friend of mine, after I've forgotten and gone out of my way, my heart broke and I died.
+
+
+ &lt;&lt;heblink [[אימא מהאגדות]]&gt;&gt;</pre>
+</div>
 <div created="20200212200933944" modified="20200212201134793" tags="Films" title="A friend">
 <pre>[img[pictures/friend.jpg]]
 
@@ -8579,11 +8600,19 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
  &lt;&lt;heblink [[אלכסנדרה]]&gt;&gt;</pre>
 </div>
 <div created="20200215135137601" modified="20200215135249722" tags="[[Coen sister]] [[Single parent children]] [[I would like to apologize]]" title="Alfred">
-<pre>
-[img[pictures/alfred.jpg]]
+<pre>[img[pictures/alfred.jpg]]
 
  &lt;&lt;heblink [[אלפרד]]&gt;&gt;
 
+</pre>
+</div>
+<div created="20200215155125827" modified="20200215155224814" tags="[[Coen sister]]" title="Angelic">
+<pre>
+[img[pictures/angelic.jpg]]
+
+
+
+ &lt;&lt;heblink [[אנ'ליק]]&gt;&gt;
 </pre>
 </div>
 <div created="20200215095540063" modified="20200215095741084" tags="[[In the Animal Farm]]" title="Assuming and Preserving">
@@ -9119,9 +9148,8 @@ The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave 
 
 </pre>
 </div>
-<div created="20200215152111069" modified="20200215152257475" tags="[[Here in the Ghetto]] Mothers Metafiction" title="Jazz's mom">
-<pre>
-[img[pictures/ima-shel-jazz.jpg]]
+<div created="20200215152111069" modified="20200215155148510" tags="[[Here in the Ghetto]] Mothers Metafiction" title="Jazz's mom">
+<pre>[img[pictures/ima-shel-jazz.jpg]]
 
 
 
@@ -9155,7 +9183,6 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 </div>
 <div created="20200215135425861" modified="20200215135806057" tags="[[Coen sister]]" title="Jozef Abaroa">
 <pre>
-
 [img[pictures/jozef.jpg]]
 
 
@@ -9259,8 +9286,7 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 </pre>
 </div>
 <div created="20200215134900574" modified="20200215135012769" tags="[[Outer sisters]] Films Music" title="Michel Gondry">
-<pre>
-[img[pictures/michel-gondry.jpg]]
+<pre>[img[pictures/michel-gondry.jpg]]
 
 
  &lt;&lt;heblink [[מישל גונדרי]]&gt;&gt;
@@ -9402,7 +9428,6 @@ I’ve tried to paint Pedro Almodóva from [[this photo|https://www.indiewire.co
 </div>
 <div created="20200215140208543" modified="20200215141026096" tags="Restaurants [[Outer sisters]]" title="Puaa">
 <pre>
-
 [img[pictures/pooa.jpg]]
 
 !!![[Yoyo]]:
@@ -9502,8 +9527,7 @@ In my last metamorphosis I was a therapist, and it is my natural tendency. I had
  &lt;&lt;heblink [[נשמה]]&gt;&gt;</pre>
 </div>
 <div created="20200215103830870" modified="20200215152213401" tags="[[Outer sisters]] Films" title="Spike Lee">
-<pre>
-[img[pictures/spike-lee.jpg]]
+<pre>[img[pictures/spike-lee.jpg]]
 
 !!![[Gura]]:
 
@@ -9611,8 +9635,7 @@ We'll leave it at that for today.
  &lt;&lt;heblink [[הכפר הגלובלי]]&gt;&gt;</pre>
 </div>
 <div created="20200215151711149" modified="20200215151942374" tags="[[Here in the Ghetto]] [[True stories]]" title="The Grass">
-<pre>
-[img[pictures/hadeshe.jpg]]
+<pre>[img[pictures/hadeshe.jpg]]
 
 !!![[Jazz's mom]]:
 
