--- a/english.html
+++ b/english.html
@@ -257,6 +257,8 @@ Error message and password prompt
 
 <li>A politician</li>
 
+<li>A Privileged Man</li>
+
 <li>Alan Ball</li>
 
 <li>Alexandra</li>
@@ -8362,7 +8364,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[A Fairy Tale's Mother]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[A Privileged Man]] [[A Fairy Tale's Mother]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8382,7 +8384,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215154649922" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215161111069" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8580,6 +8582,24 @@ With the assistance of the code she has transplanted in my father, in me and in 
 
 </pre>
 </div>
+<div created="20200215160607509" modified="20200215161321529" tags="[[True stories]] [[Monkeys with car keys]]" title="A Privileged Man">
+<pre>
+[img[pictures/gever-privilegy.jpg]]
+
+!!![[Yoyo]]:
+
+That's right, I am a privileged man, and it's not easy for me to call myself a man, I would much prefer dude, but very soon I'll be 40. I'm not greedy. I don’t look at what others have.
+
+Maybe just privileged people can afford not looking at what others have, but everybody can see their comparative advantages.
+
+[[I'm a man with many problems|They make peace]], and I have a rough self-esteem issue.
+
+I was born with one leg shorter than the other one up to a slight limp, and I've suffered from pains in my pelvis. In my childhood I went through surgeries. I was and I'm still- short. I constantly try to please, and it's peaking when it comes to women.
+
+In fact, when it comes to women I kinda dig the word woman.
+
+ &lt;&lt;heblink [[גבר פריבילגי]]&gt;&gt;</pre>
+</div>
 <div created="20191113140946887" modified="20191113143105603" tags="[[outer sisters]] films tv [[tv series]]" title="Alan Ball">
 <pre>[img[pictures/alan-ball.jpg]]
 
@@ -8606,7 +8626,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215155224814" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200215161249067" tags="[[Coen sister]]" title="Angelic">
 <pre>
 [img[pictures/angelic.jpg]]
 
