--- a/english.html
+++ b/english.html
@@ -413,6 +413,8 @@ Error message and password prompt
 
 <li>On the road to somewhere</li>
 
+<li>Once</li>
+
 <li>Outer sisters</li>
 
 <li>Papa Yoel</li>
@@ -8364,7 +8366,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[A Privileged Man]] [[A Fairy Tale's Mother]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Once [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8793,7 +8795,7 @@ coming soon as possible
 
  &lt;&lt;heblink [[ארוחת כריסמס]]&gt;&gt;</pre>
 </div>
-<div created="20200212220505011" modified="20200212222410693" tags="[[Monkeys with car keys]] Children [[A friend]] [[I would like to apologize]]" title="Coen sister">
+<div created="20200212220505011" modified="20200215162033334" tags="[[Monkeys with car keys]] Children [[A friend]] [[I would like to apologize]]" title="Coen sister">
 <pre>[img[pictures/achot-coen.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Coen sister]]&quot;&gt;&gt;
@@ -9374,6 +9376,25 @@ It's difficult for me at this point of life to think about relations.
 
 
  &lt;&lt;heblink [[בדרך לאן שהוא]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200215161549719" modified="20200215162219432" tags="Children" title="Once">
+<pre>
+!!![[Coen Sisters]]:
+''
+When smoking was permitted''
+
+[img[pictures/paam-haya-mootar.jpg]]
+
+
+
+
+&lt;&lt;list-links filter:&quot;[tag[Once]]&quot;&gt;&gt;
+
+
+ &lt;&lt;heblink [[פעם]]&gt;&gt;
+
 
 </pre>
 </div>
