--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="פעם [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215155627205" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215161521678" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10385,7 +10385,7 @@ well,
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20200215155326221" tags="[[אחות כהן]]" title="אנג'ליק">
+<div created="20161115215016493" modified="20200215161833371" tags="[[אחות כהן]]" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
@@ -17279,7 +17279,7 @@ __אופן ההכנה____
 
 בהחלט נעים וטעים לאכול [[בפסטה מיאה|http://pastamia.co.il/]] שבווילסון, אך לרוב אני קונה שם פסטה ומכין בבית. הכי אני אוהב את [[החונקי כמרים|http://pastamia.co.il/pasta_catalog.pdf]]</pre>
 </div>
-<div created="20170512173606585" modified="20190219162655322" tags="ילדים" title="פעם">
+<div created="20170512173606585" modified="20200215162304589" tags="ילדים" title="פעם">
 <pre>!!![[האחיות כהן]]:
 
 ''
@@ -17287,11 +17287,11 @@ __אופן ההכנה____
 
 [img[pictures/paam-haya-mootar.jpg]]
 
-
+''נדמה היה, שהכל בסדר''
 
 &lt;&lt;list-links filter:&quot;[tag[פעם]]&quot;&gt;&gt;
 
-''נדמה היה, שהכל בסדר''
+&lt;&lt;englink [[Once]]&gt;&gt;
 </pre>
 </div>
 <div created="20170125155935412" modified="20170125170002675" title="פפינה">
