--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="פעם [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -17279,7 +17279,7 @@ __אופן ההכנה____
 
 בהחלט נעים וטעים לאכול [[בפסטה מיאה|http://pastamia.co.il/]] שבווילסון, אך לרוב אני קונה שם פסטה ומכין בבית. הכי אני אוהב את [[החונקי כמרים|http://pastamia.co.il/pasta_catalog.pdf]]</pre>
 </div>
-<div created="20170512173606585" modified="20200215162304589" tags="ילדים" title="פעם">
+<div created="20170512173606585" modified="20200215162610647" tags="ילדים" title="פעם">
 <pre>!!![[האחיות כהן]]:
 
 ''
@@ -17287,9 +17287,11 @@ __אופן ההכנה____
 
 [img[pictures/paam-haya-mootar.jpg]]
 
-''נדמה היה, שהכל בסדר''
 
 &lt;&lt;list-links filter:&quot;[tag[פעם]]&quot;&gt;&gt;
+
+''נדמה היה, שהכל בסדר''
+
 
 &lt;&lt;englink [[Once]]&gt;&gt;
 </pre>
