--- a/english.html
+++ b/english.html
@@ -501,6 +501,8 @@ Error message and password prompt
 
 <li>Wes Anderson</li>
 
+<li>When they said cassette</li>
+
 <li>Wishing star 04</li>
 
 <li>Wyclef Jean</li>
@@ -8628,7 +8630,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215161249067" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200215163024690" tags="[[Coen sister]]" title="Angelic">
 <pre>
 [img[pictures/angelic.jpg]]
 
@@ -9846,6 +9848,16 @@ In the animal farm'', they make an effort not to exaggerate with the freedom of 
 <pre>[img[pictures/wes-anderson.jpg]]
 
  &lt;&lt;heblink [[וס אנדסון]]&gt;&gt;
+</pre>
+</div>
+<div created="20200215162802715" modified="20200215163054874" tags="Once" title="When they said cassette">
+<pre>''
+they meant tape''
+
+[img[pictures/kalletet.jpg]]
+
+ &lt;&lt;heblink [[כשאמרו קסטה]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20200212154809949" modified="20200212160231559" tags="9-side-wishing-star Laundry" title="Wishing star 04">
