--- a/index.html
+++ b/index.html
@@ -10385,7 +10385,7 @@ well,
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20200215161833371" tags="[[אחות כהן]]" title="אנג'ליק">
+<div created="20161115215016493" modified="20200215163135579" tags="[[אחות כהן]]" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
@@ -14234,11 +14234,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 זו לא הייתה ארוחה דרמטית כמו קודמתה, היה סיכוי קלוש שדןדן יגיע עם דודו אבל זה לא קרה. לעומת זאת וסוף סוף אחרי שהתעלפו יחדיו על [[הסופרנוס]] ועוד [[סדרות]], [[יויו]] סיפר לנו שהתרחשה [[תהפוכת]], והוא [[ואנג'ליק|אנג'ליק]] התאחדו. כולנו שמחנו מאד והודנו שכולנו די כבר שמנו לב.</pre>
 </div>
-<div created="20170512222504639" modified="20170514232358882" tags="פעם" title="כשאמרו קסטה">
+<div created="20170512222504639" modified="20200215163223425" tags="פעם" title="כשאמרו קסטה">
 <pre>''
 אמרו טייפ''
 
 [img[pictures/kalletet.jpg]]
+
+
+&lt;&lt;englink [[When they said cassette]]&gt;&gt;
 </pre>
 </div>
 <div created="20170512181006792" modified="20170512181424797" tags="פעם" title="כשאנשים עוד היו אופטימים">
