--- a/english.html
+++ b/english.html
@@ -8368,7 +8368,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Once [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[When they said cassette]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9850,9 +9850,9 @@ In the animal farm'', they make an effort not to exaggerate with the freedom of 
  &lt;&lt;heblink [[וס אנדסון]]&gt;&gt;
 </pre>
 </div>
-<div created="20200215162802715" modified="20200215163054874" tags="Once" title="When they said cassette">
+<div created="20200215162802715" modified="20200215164333178" tags="Once" title="When they said cassette">
 <pre>''
-they meant tape''
+they also said tape''
 
 [img[pictures/kalletet.jpg]]
 
