--- a/english.html
+++ b/english.html
@@ -435,6 +435,8 @@ Error message and password prompt
 
 <li>Restaurants</li>
 
+<li>Romema</li>
+
 <li>Rosh Hashana dinner</li>
 
 <li>Rushell</li>
@@ -500,6 +502,16 @@ Error message and password prompt
 <li>Vincent Van Gogh</li>
 
 <li>Wes Anderson</li>
+
+<li>When people were still optimistic</li>
+
+<li>When the cars were pretty</li>
+
+<li>When there were fewer cars</li>
+
+<li>When there were movie theaters</li>
+
+<li>When there were narrow and long roads</li>
 
 <li>When they said cassette</li>
 
@@ -8368,7 +8380,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[When they said cassette]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8630,7 +8642,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215163024690" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200215171317140" tags="[[Coen sister]]" title="Angelic">
 <pre>
 [img[pictures/angelic.jpg]]
 
@@ -9513,6 +9525,17 @@ It's where Yoyo spoke with [[Eva|Eva Coen]] for the first time.
 
  &lt;&lt;heblink [[מסעדות]]&gt;&gt;</pre>
 </div>
+<div created="20200215171042985" modified="20200215171543170" tags="Once [[Here in the Ghetto]] [[True stories]]" title="Romema">
+<pre>
+[img[pictures/romema.jpg]]
+
+!!![[Tomer]]:
+
+The building, the strings and what's between them.
+
+ &lt;&lt;heblink [[רוממה]]&gt;&gt;
+</pre>
+</div>
 <div created="20200215111759981" modified="20200215115526369" tags="Meals [[Food addicts]] [[Monkeys with car keys]]" title="Rosh Hashana dinner">
 <pre>[img[pictures/aruchat-rosh-hashana.jpg]]
 
@@ -9848,6 +9871,58 @@ In the animal farm'', they make an effort not to exaggerate with the freedom of 
 <pre>[img[pictures/wes-anderson.jpg]]
 
  &lt;&lt;heblink [[וס אנדסון]]&gt;&gt;
+</pre>
+</div>
+<div created="20200215164420935" modified="20200215165518955" tags="Once" title="When people were still optimistic">
+<pre>
+''They used to wave hi to each other''
+
+[img[pictures/nofefoo-leshalom.jpg]].
+
+
+
+
+ &lt;&lt;heblink [[כשאנשים עוד היו אופטימים]]&gt;&gt;
+
+
+
+</pre>
+</div>
+<div created="20200215170654803" modified="20200215170848174" tags="Once" title="When the cars were pretty">
+<pre>''
+They didn't use seat belts''
+
+[img[pictures/paam-keshe-hamechoniyot.jpg]]
+
+
+ &lt;&lt;heblink [[כשהמכוניות היו יפות]]&gt;&gt;
+</pre>
+</div>
+<div created="20200215170251235" modified="20200215170432373" tags="Once" title="When there were fewer cars">
+<pre>
+''You could play on the roadway''
+
+[img[pictures/lesachek-bacvish.jpg]]
+
+ &lt;&lt;heblink [[כשהיו מעט מכוניות]]&gt;&gt;</pre>
+</div>
+<div created="20200215165603884" modified="20200215170014903" tags="Once" title="When there were movie theaters">
+<pre>''
+People used to smoke in them too''
+
+[img[pictures/csheishnoo-bakolnoa.jpg]]
+
+
+ &lt;&lt;heblink [[כשהיו בתי קולנוע]]&gt;&gt;</pre>
+</div>
+<div created="20200215165851388" modified="20200215170114391" tags="Once" title="When there were narrow and long roads">
+<pre>
+''There was space''
+
+[img[pictures/meat-cvishim.jpg]]
+
+ &lt;&lt;heblink [[כשהיו כבישים צרים וארוכים]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20200215162802715" modified="20200215164333178" tags="Once" title="When they said cassette">
