--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כשאמרו קסטה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="פעם [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10385,7 +10385,7 @@ well,
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20200215163135579" tags="[[אחות כהן]]" title="אנג'ליק">
+<div created="20161115215016493" modified="20200215170905171" tags="[[אחות כהן]]" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
@@ -14244,28 +14244,34 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[When they said cassette]]&gt;&gt;
 </pre>
 </div>
-<div created="20170512181006792" modified="20170512181424797" tags="פעם" title="כשאנשים עוד היו אופטימים">
+<div created="20170512181006792" modified="20200215165425661" tags="פעם" title="כשאנשים עוד היו אופטימים">
 <pre>''הם היו מנופפים זה לזה לשלום''
 
 [img[pictures/nofefoo-leshalom.jpg]].
 
-</pre>
+&lt;&lt;englink [[When people were still optimistic]]&gt;&gt;</pre>
 </div>
-<div created="20170512204903436" modified="20190126102655810" tags="פעם סרטים" title="כשהיו בתי קולנוע">
+<div created="20170512204903436" modified="20200215165828102" tags="פעם סרטים" title="כשהיו בתי קולנוע">
 <pre>''גם בהם עישנו''
 
-[img[pictures/csheishnoo-bakolnoa.jpg]]</pre>
+[img[pictures/csheishnoo-bakolnoa.jpg]]
+
+&lt;&lt;englink [[When there were movie theaters]]&gt;&gt;</pre>
 </div>
-<div created="20170512212620343" modified="20170512223825296" tags="פעם" title="כשהיו כבישים צרים וארוכים">
+<div created="20170512212620343" modified="20200215170219806" tags="פעם" title="כשהיו כבישים צרים וארוכים">
 <pre>''היה מקום''
 
-[img[pictures/meat-cvishim.jpg]]</pre>
+[img[pictures/meat-cvishim.jpg]]
+
+&lt;&lt;englink [[When there were narrow and long roads]]&gt;&gt;</pre>
 </div>
-<div created="20170512195254497" modified="20170512195837990" tags="פעם" title="כשהיו מעט מכוניות">
+<div created="20170512195254497" modified="20200215170553172" tags="פעם" title="כשהיו מעט מכוניות">
 <pre>''היה אפשר לשחק בכביש''
 
 [img[pictures/lesachek-bacvish.jpg]]
 
+
+&lt;&lt;englink [[When there were fewer cars]]&gt;&gt;
 </pre>
 </div>
 <div created="20170624104950750" modified="20190314145637611" tags="מתכונים אימהות אפייה" title="כשהם ישנים">
@@ -14287,10 +14293,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[כשהם ישנים]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20170713143734032" modified="20170713144014727" tags="פעם" title="כשהמכוניות היו יפות">
-<pre>[img[pictures/paam-keshe-hamechoniyot.jpg]]
+<div created="20170713143734032" modified="20200215170932579" tags="פעם" title="כשהמכוניות היו יפות">
+<pre>
 ''
 לא השתמשו בחגורות בטיחות''
+
+
+[img[pictures/paam-keshe-hamechoniyot.jpg]]
+
+
+&lt;&lt;englink [[When the cars were pretty]]&gt;&gt;
 </pre>
 </div>
 <div created="20190305120006619" modified="20191027064147066" tags="[[כשהם ישנים]] מתכונים אפייה" title="כשנשאר בצק פריך">
