--- a/english.html
+++ b/english.html
@@ -385,6 +385,8 @@ Error message and password prompt
 
 <li>Laundry</li>
 
+<li>Life is not About Talking</li>
+
 <li>logo-bg</li>
 
 <li>Love</li>
@@ -8371,7 +8373,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200215142649922" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200215172438487" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8380,7 +8382,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Life is not About Talking]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8642,7 +8644,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215171317140" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200215172536660" tags="[[Coen sister]]" title="Angelic">
 <pre>
 [img[pictures/angelic.jpg]]
 
@@ -9251,6 +9253,24 @@ John Irving is the soul writer of Yoyo, and he stands in one line as an outer si
 
  &lt;&lt;heblink [[כביסה]]&gt;&gt;
 
+
+
+</pre>
+</div>
+<div created="20200215171950007" modified="20200215172608187" tags="[[True stories]] [[On the road to somewhere]]" title="Life is not About Talking">
+<pre>
+[img[pictures/hachaim-ze-lo.jpg]]
+
+!!![[Gura]]:
+
+Life is not about talking, it's about doing.
+It's not like, god forbidden, there's no place for talks, but in the end of the day if you say: &quot;I promise I won't shout anymore and won't threaten&quot; the least is, you have to get better.
+
+Sweet Dandan, [[who went|Dandan went]], dealt with so much of my anger shit, that wasn't related to him. Even those that were related to him, it's not ok. 
+
+He really tried to be ok. His passiveness seethes me. He loves us, but our activeness is too much for him. Daniel says that he got &quot;the same energy&quot; as ours, but he's diligencely challenged, and all he ever wants to do is nothing, just  to get high. Like I don't get it.
+
+ &lt;&lt;heblink [[החיים זה לא דיבורים]]&gt;&gt;
 
 
 </pre>
