--- a/english.html
+++ b/english.html
@@ -437,6 +437,8 @@ Error message and password prompt
 
 <li>Restaurants</li>
 
+<li>RIP Dina</li>
+
 <li>Romema</li>
 
 <li>Rosh Hashana dinner</li>
@@ -8382,7 +8384,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Life is not About Talking]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[RIP Dina]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8402,7 +8404,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215161111069" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215175924108" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8644,7 +8646,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215172536660" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200215174032182" tags="[[Coen sister]]" title="Angelic">
 <pre>
 [img[pictures/angelic.jpg]]
 
@@ -9545,6 +9547,28 @@ It's where Yoyo spoke with [[Eva|Eva Coen]] for the first time.
 
  &lt;&lt;heblink [[מסעדות]]&gt;&gt;</pre>
 </div>
+<div created="20200215173704718" modified="20200215175926497" tags="Mothers [[The Baumans]]" title="RIP Dina">
+<pre>
+[img[pictures/ima-shel-gura.jpg]]
+
+
+!!![[Gura]]:
+
+In the past, that's how our mother, of [[Yoyo]] and I, used to spend most of her time, sitting on the rocking chair at the porch reading, and occasionally grumbling or shouting what's needs to be done with increasing reproaches.
+
+She passed away when both of us were already in Paris, after my accident.
+
+We were raised obeyed, and as long as we lived in our parents' house we never dared to refuse to our mother's demands.
+
+When I recruited and left home, and started meeting people and hearing stories and sayings about parents, my blood started to boil, and even today I have [[anger outbursts|I would like to apologize]] that can occur in any minute because of some nonsense.  
+
+When it happens my voice changes and the way I speak changes. I shout and speak ugly.
+
+Though, therapy speaking, I'm covered in every direction, only recently after [[Dandan went]], Yoyo taped me bursting towards [[Alfred]] and it looks bad. Very embarrassing. 
+
+
+ &lt;&lt;heblink [[דינה זכרה לברכה]]&gt;&gt;</pre>
+</div>
 <div created="20200215171042985" modified="20200215171543170" tags="Once [[Here in the Ghetto]] [[True stories]]" title="Romema">
 <pre>
 [img[pictures/romema.jpg]]
@@ -9840,8 +9864,14 @@ In the animal farm'', they make an effort not to exaggerate with the freedom of 
 
  &lt;&lt;heblink [[עושים שלום]]&gt;&gt;</pre>
 </div>
-<div created="20200202164522080" modified="20200202164753749" tags="[[A friend]] [[Coen sister]]" title="Tomer">
+<div created="20200202164522080" modified="20200215173631203" tags="[[A friend]] [[Coen sister]]" title="Tomer">
 <pre>[img[pictures/tomer.jpg]]
+
+
+!!![[Yoyo]]:
+
+When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, and immediately afterward [[dad|Papa Yoel]] told me that he had had a girlfriend for years, and I was devastated, Tomer took me to the rocks above the sea with a bottle of whisky. We're friends since kindergarten, he lives in Tel Aviv with his wife and their baby, and every time I come, I spend two or three days in the city, and hang out with him at his place in the [[ghetto|Here in the Ghetto]]. 
+
 
  &lt;&lt;heblink [[תומר]]&gt;&gt;
 
