--- a/english.html
+++ b/english.html
@@ -391,6 +391,8 @@ Error message and password prompt
 
 <li>Love</li>
 
+<li>Marianne</li>
+
 <li>Matza balls soup</li>
 
 <li>Meals</li>
@@ -8384,7 +8386,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[RIP Dina]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8404,7 +8406,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215175924108" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215180609342" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8646,7 +8648,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215174032182" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200215181009539" tags="[[Coen sister]]" title="Angelic">
 <pre>
 [img[pictures/angelic.jpg]]
 
@@ -9288,6 +9290,18 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 
 </pre>
 </div>
+<div created="20200215180640097" modified="20200215181032321" tags="Mothers" title="Marianne">
+<pre>
+[img[pictures/marian.jpg]]
+
+!!![[Gura]]:
+
+[[Alfred's|Alfred]] mother, who abandoned their house and left to France for another man when Alfred was nine.
+
+ 
+ &lt;&lt;heblink [[מריאן]]&gt;&gt;
+</pre>
+</div>
 <div created="20200215115312612" modified="20200215115447306" tags="Recipes [[Food addicts]] Meals" title="Matza balls soup">
 <pre>[img[pictures/marak-im-kneydalach.jpg]]
 
@@ -9674,8 +9688,14 @@ And I say:
 
  &lt;&lt;heblink [[משפחת באומן]]&gt;&gt;</pre>
 </div>
-<div created="20200212155206056" modified="20200212162915903" tags="[[True stories]] [[On the road to somewhere]]" title="The blue is already here">
+<div created="20200212155206056" modified="20200215180604957" tags="[[True stories]] [[On the road to somewhere]]" title="The blue is already here">
 <pre>[img[pictures/hacachol-cvar-can.jpg]]
+
+!!![[Yoyo]]:
+
+I divide my life to three: until Ella, after Ella and Paris. Until [[Ella|Wishing star 04]] I was naïve with a hidden fear, after Ella I was naïve and aware that I am scared. In Paris it's different.
+It's not like there's no more fear, difficulty, agony, sadness and anger. The heart aches more than once- [[but the blue is already here|https://www.youtube.com/watch?v=eBdKX3qfyQk]]. 
+
 
 
  &lt;&lt;heblink [[הכחול כבר כאן]]&gt;&gt;</pre>
