--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[נחמה וחצי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200215180853223" title="$:/temp/search">
+<div created="20161023184814872" modified="20200215181259035" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10385,7 +10385,7 @@ well,
 
 </pre>
 </div>
-<div created="20161115215016493" modified="20200215180814053" tags="[[אחות כהן]]" title="אנג'ליק">
+<div created="20161115215016493" modified="20200215182042755" tags="[[אחות כהן]]" title="אנג'ליק">
 <pre>[img[pictures/angelic.jpg]]
 
 !!![[אירי]]:
@@ -15614,14 +15614,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 [[נולדנו|https://www.youtube.com/watch?v=Or-dVWZzS7Q]] כולנו [[כאן|גלות]] בין 1955 ל-2000.
 ארבעה מאיתנו שייכים לדור הבייבי בום, חמישה לדור ה-X, יותר ממחצית לדור ה-Y ו 3 לדור ה-Z. פיליפ הוא המבוגר ביותר וראשל היא בתנו הקטנה.</pre>
 </div>
-<div created="20190423072741286" modified="20190428045402093" tags="[[כאן בגטו]] [[בתי קפה]] [[סיפורים אמיתיים]]" title="נחמה וחצי">
+<div created="20190423072741286" modified="20200215182109247" tags="[[כאן בגטו]] [[בתי קפה]] [[סיפורים אמיתיים]]" title="נחמה וחצי">
 <pre>[img[pictures/nechama-vahetzi.jpg]]
 
 !!![[תומר]]:
 
 בשנים שחייתי עם [[שפי|ננו שלי ואני]], היא הכריזה יום אחד, [[שנחמה וחצי|https://nechama-vahetzi.co.il/]] זה המקום שלה, וביקשה שאוותר, ואכן כמה שנים לא נכנסתי לנחמה היקרה, שניצבת בהוד והדר כאן בגטו, על אחד העם, ככר הבימה, שדרות בן-ציון, תרס&quot;ט ורוטשילד, ועכשיו חוזר.
 
-</pre>
+&lt;&lt;englink [[Nehama Vahetzi]]&gt;&gt;</pre>
 </div>
 <div created="20171219203307613" modified="20171226151035506" tags="[[סיפורים אמיתיים]]" title="נטע">
 <pre>[img[pictures/neta.jpg]]
