--- a/english.html
+++ b/english.html
@@ -413,6 +413,8 @@ Error message and password prompt
 
 <li>My Mother</li>
 
+<li>Nehama Vahetzi</li>
+
 <li>Northern Exposure</li>
 
 <li>On the road to somewhere</li>
@@ -8377,7 +8379,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200215172438487" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200215181421022" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8386,7 +8388,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Nehama Vahetzi]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9411,6 +9413,17 @@ It's difficult for me at this point of life to think about relations.
 
 
  &lt;&lt;heblink [[אימא שלי]]&gt;&gt;</pre>
+</div>
+<div created="20200215181227245" modified="20200215181431973" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]] [[True stories]]" title="Nehama Vahetzi">
+<pre>
+[img[pictures/nechama-vahetzi.jpg]]
+
+!!![[Tomer]]:
+
+In the years I've lived with Sheffy, she declared one day that Nehama Vahetzi is her place, and asked me to let go, and indeed for several years I haven't been to dear Nehama, who stands majestically here in the ghetto, at AhadHa'Am, Habima square, Ben Tsiton Boulevard, Tarsat Ave and Rothschild, and now I'm coming back. 
+
+
+</pre>
 </div>
 <div created="20200213180740266" modified="20200213212640944" tags="[[Outer sisters]] [[TV Series]] TV Films" title="Northern Exposure">
 <pre>[img[pictures/northern-exposure.jpg]]
