--- a/english.html
+++ b/english.html
@@ -8379,7 +8379,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200215181421022" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200215181549103" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8650,7 +8650,7 @@ Only two weeks ago I became aware of his existence, because only two weeks ago I
 
 </pre>
 </div>
-<div created="20200215155125827" modified="20200215181009539" tags="[[Coen sister]]" title="Angelic">
+<div created="20200215155125827" modified="20200215182004456" tags="[[Coen sister]]" title="Angelic">
 <pre>
 [img[pictures/angelic.jpg]]
 
@@ -9414,13 +9414,16 @@ It's difficult for me at this point of life to think about relations.
 
  &lt;&lt;heblink [[אימא שלי]]&gt;&gt;</pre>
 </div>
-<div created="20200215181227245" modified="20200215181431973" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]] [[True stories]]" title="Nehama Vahetzi">
+<div created="20200215181227245" modified="20200215182344292" tags="[[Here in the Ghetto]] Coffee [[Coffee shops]] [[True stories]]" title="Nehama Vahetzi">
 <pre>
 [img[pictures/nechama-vahetzi.jpg]]
 
 !!![[Tomer]]:
 
-In the years I've lived with Sheffy, she declared one day that Nehama Vahetzi is her place, and asked me to let go, and indeed for several years I haven't been to dear Nehama, who stands majestically here in the ghetto, at AhadHa'Am, Habima square, Ben Tsiton Boulevard, Tarsat Ave and Rothschild, and now I'm coming back. 
+In the years I've lived with [[Sheffy|Nano and I]] , she declared one day that [[Nehama Vahetzi|https://nechama-vahetzi.co.il/]] is her place, and asked me to let go, and indeed for several years I haven't been to dear Nehama, who stands majestically here in the ghetto, at Ahadha'am, Habima square, Ben Tsiton Boulevard, Tarsat Ave and Rothschild, and now I'm coming back. 
+
+
+ &lt;&lt;heblink [[נחמה וחצי]]&gt;&gt;
 
 
 </pre>
